syntax = "proto3";

package grpc.server.grpc_server.user;
import "google/protobuf/timestamp.proto";

message CreateUserRequest {
  User user = 1;

  message User {
    string email = 2;
    string phoneNum = 3;
    string name = 4;
    string password = 5;
  }
}

message CreateUserResponse{
  int64 id =1;
}

message FindByUserIdRequest {
  int64 userId = 1;
}

message FindByUserIdResponse {
  User user = 1;

  message User {
    int64 id = 2;
    string email = 3;
    string phoneNum = 4;
    string name = 5;
    string password = 6;
    bool isActive = 7;
    google.protobuf.Timestamp dateOfCreated = 8;
  }
}

message ErrorResponse {
  string error_name = 1;
}

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc FindByUserId (FindByUserIdRequest) returns (FindByUserIdResponse);
}